added dropbox for pictures, fixed upload_pic controller

--- a/njp/templates/njp/add_pic.html
+++ b/njp/templates/njp/add_pic.html
@@ -2,74 +2,83 @@
 {% load static %}
 {% block content %}
     <div class="upload-wrapper">
-        <div class="upload-zone">
-            <form method="post" enctype="multipart/form-data">
-                <div class="preview-wrapper">
-                    <img id="preview-image" src="{% static 'njp/images/placeholder-image.jpg' %}"
-                         alt="Превью изображение">
+        <div class="upload-zone" id="upload-zone">
+            <form method="post" enctype="multipart/form-data" id="upload-form">
+                <div class="preview-wrapper" id="preview-wrapper">
+                    <img id="preview-image" src="{% static 'njp/images/placeholder-image.jpg' %}" alt="Превью изображение">
                 </div>
 
                 {% csrf_token %}
                 <p>
-                    <input style="opacity: 0;height: 0" type="file" name="photo" accept="image/*" required
-                           id="id_photo"
-                           class="input id_photo">
+                    <input style="opacity: 0;height: 0" type="file" name="photo" accept="image/*" required id="id_photo" class="input id_photo">
                     <label for="id_photo" class="input__file-button">
-                        <span class="input__file-icon-wrapper"><img class="input__file-icon"
-                                                                    src="{% static '/njp/images/upload.svg' %}"
-                                                                    alt="Выбрать файл" width="25"></span>
+                        <span class="input__file-icon-wrapper"><img class="input__file-icon" src="{% static '/njp/images/upload.svg' %}" alt="Выбрать файл" width="25"></span>
                         <span class="input__file-button-text">Выберите файл</span>
                     </label>
                 </p>
 
-
-                <input type="text" name="tags" maxlength="255" required id="id_tags" class="tags-input"
-                       placeholder="Введите теги через запятую">
+                <input type="text" name="tags" maxlength="255" required id="id_tags" class="tags-input" placeholder="Введите теги через запятую">
                 <button class="submit-button" type="submit">Загрузить</button>
             </form>
         </div>
     </div>
 
     <script>
-        let inputs = document.querySelectorAll('.id_photo');
+        let input = document.getElementById('id_photo');
         let previewImage = document.getElementById('preview-image');
+        let tagsInput = document.getElementById('id_tags');
+        let submitButton = document.querySelector('.submit-button');
+        let uploadForm = document.getElementById('upload-form');
 
-        Array.prototype.forEach.call(inputs, function (input) {
-            let label = input.nextElementSibling;
-
-            input.addEventListener('change', function () {
-                let countFiles = this.files.length;
-
-                if (countFiles) {
-                    let reader = new FileReader();
-
-                    reader.onload = function (e) {
-                        previewImage.src = e.target.result;
-                    };
-
-                    reader.readAsDataURL(this.files[0]);
-
-                    let sliced = this.files[0].name.slice(0, 14);
-                    if (sliced.length < this.files[0].name.length) {
-                        sliced += '...';
-                    }
-                    label.querySelector('.input__file-button-text').innerText = sliced;
-                    hideElement();
-                }
-            });
+        input.addEventListener('change', function () {
+            displayImage(this.files[0]);
         });
 
-        function hideElement() {
-            var butt = document.querySelector('.submit-button');
-            var tags = document.querySelector('.tags-input');
+        let uploadZone = document.getElementById('upload-zone');
 
-            if (butt) {
-                butt.style.opacity = 100;
-                tags.style.opacity = 100;
+        uploadZone.addEventListener('drop', function(event) {
+            event.preventDefault();
+            let droppedFiles = event.dataTransfer.files;
+            if (droppedFiles.length > 0) {
+                input.files = droppedFiles;
+                displayImage(droppedFiles[0]);
+            }
+        });
+
+        uploadZone.addEventListener('dragover', function(event) {
+            event.preventDefault();
+        });
+
+        function displayImage(file) {
+            let reader = new FileReader();
+            reader.onload = function (e) {
+                previewImage.src = e.target.result;
+            };
+            reader.readAsDataURL(file);
+
+            let sliced = file.name.slice(0, 14);
+            if (sliced.length < file.name.length) {
+                sliced += '...';
+            }
+            document.querySelector('.input__file-button-text').innerText = sliced;
+            hideElement();
+        }
+
+        function hideElement() {
+            if (submitButton) {
+                submitButton.style.opacity = 100;
+                tagsInput.style.opacity = 100;
             } else {
-                console.error("Элемент с id 'myElement' не найден.");
+                console.error("Элементы не найдены.");
             }
         }
+
+        uploadForm.addEventListener('submit', function(event) {
+            let files = input.files;
+            if (files.length === 0) {
+                event.preventDefault();
+                alert('Пожалуйста, выберите или перетащите файл в поле "Выберите файл".');
+            }
+        });
     </script>
 {% endblock %}
-
