--- a/njp/templates/njp/add_pic.html
+++ b/njp/templates/njp/add_pic.html
@@ -17,7 +17,7 @@
                         <span class="input__file-icon-wrapper"><img class="input__file-icon"
                                                                     src="{% static '/njp/images/upload.svg' %}"
                                                                     alt="Выбрать файл" width="25"></span>
-                        <span class="input__file-button-text">Выберите файл</span>
+                        <span class="input__file-button-text">Перетащите или выберите файл</span>
                     </label>
                 </p>
 
